mutt (1.5.12) UNRELEASED; urgency=low

  * New upstream release.

 -- Adeodato Simó <dato@net.com.org.es>  Sat, 15 Jul 2006 01:14:33 +0200

mutt (1.5.11+cvs20060403-2) unstable; urgency=high

  * Fix CVE-2006-3242, stack-based buffer overflow when processing an overly
    long namespace from the IMAP server.  (Closes: #375828)

 -- Adeodato Simó <dato@net.com.org.es>  Fri,  7 Jul 2006 15:01:28 +0200

mutt (1.5.11+cvs20060403-1) unstable; urgency=low

  * Update to CVS 2006-04-03, which finally:
    + fixes segfault when changing to an IMAP folder and the mailbox name
      is implicitly INBOX. (Closes: #351337, #353550)

 -- Adeodato Simó <dato@net.com.org.es>  Tue,  4 Apr 2006 06:10:12 +0200

mutt (1.5.11+cvs20060330-1) unstable; urgency=low

  * Update to CVS 2006-03-30, which fixes the following bugs:
    + IMAP cache works again with Courier. (Closes: #351220)
    + does not segfault if external query command output contains spaces.
      (Closes: #351258)
    + does not segfault when replying from the view-attachments menu when a
      reply-hook is in use. (Closes: #352357)
    + default save location for attachments which specify a path in their name
      is not `dirname $attachment` anymore, but $CWD. (Closes: #301236)
  
  * Switch to libdb4.4. (Closes: #355433)

 -- Adeodato Simó <dato@net.com.org.es>  Mon,  3 Apr 2006 02:41:15 +0200

mutt (1.5.11+cvs20060126-2) unstable; urgency=medium

  * Make imap_idle default to off, since it does not work with dovecot from
    stable, which a lot of people use; upstream will make this change before
    1.5.12. (Closes: #351263, #354902)

  * Ignore DKIM-Signature by default in /etc/Muttrc. (Closes: #354907)

 -- Adeodato Simó <dato@net.com.org.es>  Thu,  2 Mar 2006 22:42:34 +0100

mutt (1.5.11+cvs20060126-1) unstable; urgency=low

  * Update to CVS 2006-01-26; since this includes a huge diff between
    ChangeLog and ChangeLog.old (moved entries), prepare a new tarball.
    Some worth-mentioning changes:
