@@ -1,10 +1,11 @@
 debian/extra/README.SMIME
 debian/tmp/README.Patches
 debian/tmp/usr/share/doc/NEWS
+debian/tmp/usr/share/doc/NEWS.old
 debian/tmp/usr/share/doc/TODO
 debian/tmp/usr/share/doc/README
 debian/tmp/usr/share/doc/README.SSL
 debian/tmp/usr/share/doc/README.SECURITY
 debian/tmp/usr/share/doc/PGP-Notes.txt
-debian/tmp/usr/share/doc/ChangeLog.old
+debian/tmp/usr/share/doc/changelog.old
 debian/tmp/usr/share/doc/manual.txt
