@@ -1,6 +1,7 @@
 mutt (1.5.12) UNRELEASED; urgency=low
 
-  * New upstream release.
+  * New upstream release. Ship upstream's UPDATING file as NEWS.gz in
+    /usr/share/doc/mutt.
 
  -- Adeodato Simó <dato@net.com.org.es>  Sat, 15 Jul 2006 01:14:33 +0200
 
